--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   tutorial_coach_mark: ^1.2.8
   select_form_field: ^2.2.0
   perfect_volume_control: ^1.0.5
+  get: ^4.6.5
+  flutter_tts: ^3.6.3
 
 dev_dependencies:
   flutter_test:
